tests/ui/errors/unsupported_attrs.stderr
error: directive `style` is not supported on components
 --> tests/ui/errors/unsupported_attrs.rs:6:19
  |
6 |         Component style:color="white";
  |                   ^^^^^^^^^^^

error: directive `class` is not supported on components
  --> tests/ui/errors/unsupported_attrs.rs:12:19
   |
12 |         Component class:red={true};
   |                   ^^^^^^^^^

error: directive `prop` is not supported on components
  --> tests/ui/errors/unsupported_attrs.rs:18:19
   |
18 |         Component prop:value="1";
   |                   ^^^^^^^^^^

error: spread attributes not supported on components
  --> tests/ui/errors/unsupported_attrs.rs:30:22
   |
30 |         Component {..attrs};
   |                      ^^^^^

error: directive `attr` is not supported on html elements
  --> tests/ui/errors/unsupported_attrs.rs:36:15
   |
36 |         input attr:class="no" type="text";
   |               ^^^^^^^^^^

error: directive `clone` is not supported on html elements
  --> tests/ui/errors/unsupported_attrs.rs:44:18
   |
44 |             span clone:{notcopy} {
   |                  ^^^^^^^^^^^^^^

error: class/id selector shorthand is not allowed on components
  --> tests/ui/errors/unsupported_attrs.rs:53:18
   |
53 |         Component.not-working #some-id;
   |                  ^^^^^^^^^^^^^^^^^^^^^
